<resources>
    <string name="app_name">S-Leaf</string>

    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_favorite">Favorites</string>

    <string name="label_capture_image">Capture Image</string>
    <string name="label_scan_image">Scan Image</string>
    <string name="label_open_gallery">Gallery</string>
    <string name="empty_favorite">You dont have any favorite plant!</string>

    <string name="title_add_favorite">Add Favorites</string>
    <string name="title_remove_favorite">Remove Favorites</string>
</resources>