<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mnhyim.s_leaf.views.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.mnhyim.s_leaf.views.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.mnhyim.s_leaf.views.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>