<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".views.scan.ScanFragment">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_scanResult"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="8dp"
        app:riv_mutate_background="true" />


    <LinearLayout
        android:id="@+id/lv_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_scanResult">

        <Button
            android:id="@+id/btn_captureImage"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.5"
            android:text="@string/label_capture_image" />

        <Button
            android:id="@+id/btn_galleryPicker"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="0.5"
            android:text="@string/label_open_gallery" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_scanImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_scan_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lv_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>